# Sudoku-Solver

./: .mypy.ini  .pre-commit-config.yaml  README.md  async_clock.py  component.py  crash.py  crop.py  location.py  main.py  pyproject.toml  requirements.txt  sprite.py  sudoku-gui.py  sudoku.py  vector.py
src/sudokusolver/: __init__.py  async_clock.py  component.py  crop.py  location.py  namedtuple_mod.py  sprite.py  statemachine.py  sudoku-gui.py  sudoku.py  sudoku_gui.py  vector.py
