[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "numpy",
    "pygame",
    "trio",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-noqa",
    "isort",
    "mypy",
    "pre-commit",
    "pre-commit-hooks",
    "pycln",
    "pytest",
    "pytest-cov",
    "pytest-trio",
    "tox",
    "trio-typing[mypy]",
]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin", "trio_typing.plugin"]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.black]
line-length = 79
target-version = ['py311']

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 79
skip = [".git", ".github", ".venv"]
